tests/analyzer/fail/nested-struct-bad.api
// expected: 1009

type bad = struct {
    a: u32,
    b: struct {
        f: nope,
    },
};